# helto-privacy

./: .gitignore  ADOPTION_GUIDE.md  AGENTS.md  CONTEXT.md  LICENSE  README.md  pyproject.toml  tickets.md
docs/: acceptance-harness.md  dual-mode-records-singletons.md  legacy-migration.md  opaque-operation-references.md  private-media-leases.md  record-reference-migration.md
helto_privacy/: __init__.py  __main__.py  _atomic_file.py  _encrypted_journal.py  _legacy_key_source.py  _plaintext.py  _private_response.py  _suite_codec.py  adapters.py  artifact_publication.py  artifact_stream.py  artifacts.py  associations.py  cli.py  comfy_ui.py  concurrency.py  envelope.py  execution.py  external_mode_transition.py  external_operation_state.py  external_operations.py  fido2_provider.py  guard.py  keystore.py  migration.py  mode.py  mode_participants.py  mode_runtime.py  mode_state.py  mode_values.py  opaque_references.py  operation_dependencies.py  operator_activation.py  profile.py  protected_operations.py  record_relocation.py  records.py  runtime.py  singletons.py  snapshot.py  (+7 more)
tests/: __init__.py  _legacy_envelope_fixture.py  conftest.py  mode_protocol_fixtures.py  privacy_js_test_support.py  test_acceptance_harness.py  test_adapters.py  test_artifact_publication.py  test_artifact_stream.py  test_artifacts.py  test_authorization.py  test_comfy_ui.py  test_dual_mode_artifacts.py  test_dual_mode_records_singletons.py  test_envelope.py  test_execution.py  test_external_migration.py  test_external_mode_transition.py  test_external_operation_state.py  test_keystore.py  (+37 more)
(+152 files in other folders)
