[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "helto-privacy"
version = "0.4.2"
description = "Shared privacy keystore and envelope helpers for Helto node packs."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Helto" },
]
dependencies = [
    "cryptography>=42.0",
]

[tool.setuptools.packages.find]
include = ["helto_privacy*"]

[tool.setuptools.package-data]
helto_privacy = ["web/*.js", "acceptance/data/*.json", "trust/*.pem"]

[tool.pytest.ini_options]
testpaths = ["tests"]
